--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="conteiner">
         <h1>Formulário de Pessoa</h1>
         <form id="formEndereco">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="Nome" required>
+            <input type="text" id="nome" name="Nome" placeholder="nome completo" required>
 
             <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" name="CPF" required>
+            <input type="text" id="cpf" name="CPF" placeholder="xxxxxxxxxXX" required>
 
             <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone" name="Telefone" required>
+            <input type="text" id="telefone" name="Telefone" placeholder="XXXXX-XXXX" required>
 
 
             <button type="submit">Enviar</button>
